Orquestacion_RestApi/archivos_de_configuracion/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bdiaz
  labels:
     tipo: entorno-desarrollo
