Orquestacion_RestApi/archivos_de_configuracion/service-api-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-apache-api
  labels:
    app: api
    tier: front
spec:  
  type: NodePort 
  ports:
  - port: 80
  selector:
    app: api
    tier: front
