Orquestacion_RestApi/archivos_de_configuracion/service-mysql-api-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
    tier: back
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: db
    tier: back
